--- a/src/components/Section/Product/style.module.scss
+++ b/src/components/Section/Product/style.module.scss
@@ -5,6 +5,9 @@
     align-items: center;
     p {
       margin: 0;
+      font-size: 12px;
+      color: #6b7280;
+      font-weight: 400;
     }
     h3 {
       margin: 0;
@@ -17,9 +20,6 @@
       font-size: 15px;
     }
     .customRow {
-      p {
-        font-size: 12px;
-      }
       h3 {
         font-size: 12px;
       }
