--- a/src/components/pages/header/style.module.scss
+++ b/src/components/pages/header/style.module.scss
@@ -4,6 +4,12 @@
     top: 0;
     z-index: 1;
     width: 100%;
+    display: flex;
+    align-items: center;
+    background-color: white;
+    justify-content: space-between;
+    border-bottom: 1px solid rgb(244, 244, 244);
+    box-shadow: rgb(244, 244, 244) 0px 0px 10px;
   }
 }
 
