--- a/src/components/Sider/style.module.scss
+++ b/src/components/Sider/style.module.scss
@@ -1,3 +1,8 @@
+.MenuItems {
+  min-height: calc(100vh - 128px);
+  max-height: calc(100vh - 128px);
+  overflow: auto;
+}
 .iconsDiv {
   display: flex;
   justify-content: space-evenly;
