--- a/src/Layout/style.module.scss
+++ b/src/Layout/style.module.scss
@@ -18,7 +18,7 @@
     :global(.ant-layout-sider) {
       // height: calc(100vh - 64px);
       z-index: 99;
-      overflow: auto;
+      // overflow: auto;
       // max-height: calc(100vh - 64px);
     }
     :global(.ant-layout-content) {
