--- a/src/components/Section/Product/style.module.scss
+++ b/src/components/Section/Product/style.module.scss
@@ -11,6 +11,12 @@
     }
     h3 {
       margin: 0;
+      .sales {
+        margin: 0;
+        font-size: 12px;
+        color: #6b7280;
+        font-weight: 400;
+      }
     }
   }
 }
