--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
-:global(body){
-  font-family: Inter;
+body{
+  font-family: 'circular';
+}
+h1,h2,h3,h4,h5,h6,p,span {
+  font-family: 'circular';
 }
