--- a/src/pages/ProjectDetails/ProjectDetails.css
+++ b/src/pages/ProjectDetails/ProjectDetails.css
@@ -2,7 +2,8 @@
     width: 100%;
     padding: 20px;
     background-color: #f4f5f7;
-    min-height: 100vh;
+    height: calc(100vh - 64px);
+    overflow: auto;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     opacity: 0;
     transform: translateY(10px);
@@ -201,7 +202,7 @@
     color: #fff;
   }
   
-  .status-tag.idle {
+  .status-tag.inactive {
     background-color: #f39c12;
     color: #fff;
   }
